--- a/src/2-form.html
+++ b/src/2-form.html
@@ -4,11 +4,10 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vanilla App Template</title>
+    <title>Form</title>
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <a href="/1-gallery.html">Gallery</a>
-    <a href="/2-form.html">Form</a>
+    <script type="module" src="./js/2-form.js"></script>
   </body>
 </html>
