--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <a href="/1-gallery.html">Gallery</a>
-    <a href="/2-form.html">Form</a>
+    <a href="/1-gallery.html">1 - Gallery</a>
+    <a href="/2-form.html">2 - Form</a>
   </body>
 </html>
