--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,9 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <a href="/1-gallery.html">1 - Gallery</a>
-    <a href="/2-form.html">2 - Form</a>
+    <ol>
+      <li><a href="/goit-advancedjs-hw-01/1-gallery.html">Gallery</a></li>
+      <li><a href="/goit-advancedjs-hw-01/2-form.html">Form</a></li>
+    </ol>
   </body>
 </html>
