--- a/src/index.html
+++ b/src/index.html
@@ -9,8 +9,8 @@
   </head>
   <body>
     <ol>
-      <li><a href="/goit-advancedjs-hw-01/1-gallery.html">Gallery</a></li>
-      <li><a href="/goit-advancedjs-hw-01/2-form.html">Form</a></li>
+      <li><a href="./1-gallery.html">Gallery</a></li>
+      <li><a href="./2-form.html">Form</a></li>
     </ol>
   </body>
 </html>
